# service/src/main/java/br/com/sw2you/realmeet/controller/AllocationController.java
@@ -1,0 +1,35 @@
+package br.com.sw2you.realmeet.controller;
+
+import static java.util.concurrent.CompletableFuture.runAsync;
+import static java.util.concurrent.CompletableFuture.supplyAsync;
+
+import br.com.sw2you.realmeet.api.facade.AllocationsApi;
+import br.com.sw2you.realmeet.api.facade.RoomsApi;
+import br.com.sw2you.realmeet.api.model.*;
+import br.com.sw2you.realmeet.service.AllocationService;
+import br.com.sw2you.realmeet.service.RoomService;
+import br.com.sw2you.realmeet.util.ResponseEntityUtils;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+public class AllocationController implements AllocationsApi {
+
+    private final Executor controllerExecutor;
+    private final AllocationService allocationService;
+
+    public AllocationController(Executor controllerExecutor, AllocationService allocationService) {
+        this.controllerExecutor = controllerExecutor;
+        this.allocationService = allocationService;
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<AllocationDTO>> createAllocation(CreateAllocationDTO createAllocationDTO) {
+        return supplyAsync(() -> allocationService.createAllocation(createAllocationDTO), controllerExecutor)
+                .thenApply(ResponseEntityUtils::created);
+    }
+
+
+}
